--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,7 @@ jobs:
               newman install -g newman-reporter-htmlextra
       - name: Run the Postman Collection with Newman
         run: |
-              newman run 
+              newman run In-WarrantyFlow-Data-Driven.postman_collection \
+              -e QA.postman_environment.json \
+              -d testdata.csv \
+              -r cli,htmlextra
