--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
           node-version: 22
       - name: Install Newman and HTML Extra globally
         run: |
-              newman install -g newman
-              newman install -g newman-reporter-htmlextra
+              npm install -g newman
+              npm install -g newman-reporter-htmlextra
       - name: Run the Postman Collection with Newman
         run: |
               newman run In-WarrantyFlow-Data-Driven.postman_collection \
