--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,8 @@ jobs:
               -d testdata.csv \
               -r cli,htmlextra
               
-      - name: Upload HTML Report to Artifact
+      - name: Archive the report
         uses: actions/upload-artifact@v6.0.0
+        with:
+          name: Newman Report
+          path: newman/*.html
