Add conditional execution for report archiving

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
               -r cli,htmlextra
               
       - name: Archive the report
+        if: always()
         uses: actions/upload-artifact@v6.0.0
         with:
           name: Newman Report
