--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,28 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: newman/
-      
+      - name: Send Email Notification
+        if: always()
+        uses: dawidd6/action-send-mail@v7
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }} # NOT GMAIL PASSWORD, USE APP PASSWORD
+          subject: Phoenix In-Warranty Flow Test Execution Notification
+          to: shaikhshoaib175@outlook.com
+          from: ${{ secrets.EMAIL_USERNAME }}
+          body: |
+                 Hello Team,
+
+                 The automated test execution for the Phoenix In-Warranty flow has been completed via GitHub Actions.
+
+                 Report URL: https://shoaib175.github.io/Phoenix-Inwarranty-Flow/
+
+                 Please let me know if any clarification or re-run is required.
+
+                 Regards,
+                 Shoaib
   
   
     
