--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   run-postman-test:  # Name of the job
-    runs-on: ec2-github-runner
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout the code
